[gd_scene load_steps=4 format=3 uid="uid://btraining_screen"]

[ext_resource type="Script" path="res://ui/training_screen.gd" id="1_training"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.4, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TrainingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_training")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TrainingTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.4, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "◆ TRAINING ◆"
horizontal_alignment = 1

[node name="TrainerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "I can teach you the following:"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Your Gold: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipePanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecipeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RecipePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ AVAILABLE RECIPES ══"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RecipePanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RecipePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/RecipePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="DetailsPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 15
text = "══ RECIPE DETAILS ══"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/DetailsPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ContentContainer/DetailsPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LearnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "LEARN (ENTER)"
flat = true

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 13
text = "[Up/Down] Select  |  [Enter] Learn Recipe  |  [Esc] Close"
horizontal_alignment = 1
